# subsetter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  gitflow.md  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: run_unit_tests.yml
python/nwm/: README.md  setup.cfg
python/nwm/src/subsetter/nwm/: subset.py  types.py  utilities.py
