[metadata]
name = subsetter.nwm
version = attr: subsetter.nwm._version.__version__
author = Austin Raney
author_email = araney@cuahsi.org
description = Spatially subset operational National Water Model (NWM) static domain files.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_files =
    LICENSE
url = https://github.com/CUAHSI/subsetter
project_urls =
    Documentation = https://cuahsi.github.io/subsetter/
    Source = https://github.com/CUAHSI/subsetter/
    Tracker = https://github.com/CUAHSI/subsetter/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    numpy
    xarray
    netcdf4
    pyproj
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
